examples/test/testpolicy1156.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1156
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key25: value36
      key45: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value31
          key28: value34
          key34: value38
      podSelector:
        matchLabels:
          key41: value47
          key2: value25
